Open discord in a new tab

--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -1,5 +1,5 @@
 <li><a href="/">Home</a></li>
 <li><a href="/pricing">Pricing</a></li>
 <li><a href="/docs">Docs</a></li>
-<li><a href="https://discord.gg/fJbwebvTWU">Discord</a></li>
+<li><a href="https://discord.gg/fJbwebvTWU" target="_blank">Discord</a></li>
 <li><a href="https://github.com/se-nexus">GitHub</a></li>
