--- a/css/syntax_monokai.scss
+++ b/css/syntax_monokai.scss
@@ -1,6 +1,11 @@
 ---
 ---
 
+.highlight {
+  padding: 0 10px;
+  overflow-x: auto;
+}
+
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .gh {
