--- a/css/license.scss
+++ b/css/license.scss
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
 	text-align: center;
 }
-p#license-key {
+p.monospace {
 	font-family: monospace;
 	font-size: 1.4em;
 }
