Add download button

--- a/css/license.scss
+++ b/css/license.scss
@@ -12,3 +12,18 @@ p.monospace {
 	font-family: monospace;
 	font-size: 1.4em;
 }
+
+
+.button {
+	display: block;
+	text-align: center;
+	margin: 4em auto 0 auto;
+	border-radius: 50px;
+	padding: 12px 24px;
+	background-color: #067af3;
+	border: 1px solid #067af3;
+	cursor: pointer;
+	color: white;
+	max-width: 238px;
+	text-decoration: none;
+}
