Add privacy policy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,11 @@
 ---
 layout: global
 ---
-<div class="main-content">
-	{{ content }}
-</div>
+<main>
+	<div class="main-content">
+		{{ content }}
+	</div>
+</main>
+<footer>
+	<a href="/privacy">Privacy</a>
+</footer>
