--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -5,47 +5,48 @@ style:
 - /css/syntax_monokai.css
 ---
 
-
-<div class="docmenu">
-	<div>
-	{% assign mydocs = site.docs | sort: 'order' %}
-	{% assign mydocs = mydocs | group_by: 'category' %}
-	{% for cat in mydocs %}
+<main>
+	<div class="docmenu">
+		<div>
+		{% assign mydocs = site.docs | sort: 'order' %}
+		{% assign mydocs = mydocs | group_by: 'category' %}
+		{% for cat in mydocs %}
+		
+			<input type="checkbox" id="{{ cat.name | uri_escape }}" {% if page.category == cat.name %}checked{% endif %}>
+			<label class="docmenu-label docmenu-item" for="{{ cat.name | uri_escape }}">
+			{% assign cat_default = cat.items | where: "category_default", true %}
+			{% if cat_default != empty %}
+				<a href="{{ cat_default.first.url }}">{{ cat.name }}</a>
+			{% else %}
+				<span>{{ cat.name }}</span>
+			{% endif %}
+				<img src="/img/expand.svg" alt="expand">
+			</label>
 	
-		<input type="checkbox" id="{{ cat.name | uri_escape }}" {% if page.category == cat.name %}checked{% endif %}>
-		<label class="docmenu-label docmenu-item" for="{{ cat.name | uri_escape }}">
-		{% assign cat_default = cat.items | where: "category_default", true %}
-		{% if cat_default != empty %}
-			<a href="{{ cat_default.first.url }}">{{ cat.name }}</a>
-		{% else %}
-			<span>{{ cat.name }}</span>
-		{% endif %}
-			<img src="/img/expand.svg" alt="expand">
-		</label>
-
-		<ul>
-			{% assign items = cat.items | sort: 'order' %}
-			{% for item in items %}
-				{% if item.category_default != true %}
-				<li class="docmenu-item"><a href="{{ item.url }}" {% if page.url == item.url %}class="highlight"{% endif %}>{{ item.title }}</a></li>
-				{% endif %}
-		
-			{% endfor %}
-		</ul>
-	{% endfor %}
-		
+			<ul>
+				{% assign items = cat.items | sort: 'order' %}
+				{% for item in items %}
+					{% if item.category_default != true %}
+					<li class="docmenu-item"><a href="{{ item.url }}" {% if page.url == item.url %}class="highlight"{% endif %}>{{ item.title }}</a></li>
+					{% endif %}
+			
+				{% endfor %}
+			</ul>
+		{% endfor %}
+			
+		</div>
 	</div>
-</div>
-
-<div class="main-content">
-
-	{% capture anchor_body %}
-		<img src="/img/link.svg" alt="link">
-	{% endcapture %}
-
-	{% include anchor_headings.html html=content anchorBody=anchor_body anchorClass='docanchor' anchorAttrs='aria-label="Permalink to %heading%"' headerAttrs='class="docheading"' h_min=2 %}
-</div>
-
-<div class="toc">
-	<div>{% include toc.html html=content sanitize=true class="tocdata" h_min=2 h_max=3 %}</div>
-</div>
+	
+	<div class="main-content">
+	
+		{% capture anchor_body %}
+			<img src="/img/link.svg" alt="link">
+		{% endcapture %}
+	
+		{% include anchor_headings.html html=content anchorBody=anchor_body anchorClass='docanchor' anchorAttrs='aria-label="Permalink to %heading%"' headerAttrs='class="docheading"' h_min=2 %}
+	</div>
+	
+	<div class="toc">
+		<div>{% include toc.html html=content sanitize=true class="tocdata" h_min=2 h_max=3 %}</div>
+	</div>
+</main>
