--- a/css/docs.scss
+++ b/css/docs.scss
@@ -6,7 +6,6 @@
 .docmenu {
 	border-right: 1px solid gray;
 	box-shadow: 4px 4px 2px 0 rgba(0, 0, 0, .5);
-	padding: 5px;
 	min-height: 100%;
 	min-width: 14rem;
 	max-width: 14rem;
@@ -40,6 +39,10 @@ main {
 
 .main-content {
 	flex-grow: 1;
+	min-width: 0;
+	a {
+		text-decoration: underline;
+	}
 }
 
 @media not screen and (min-width: 768px)  {
@@ -63,14 +66,7 @@ main {
 @media (max-width: calc(14rem * 2 + 850px))
 {
 	.toc {
-		border: none;
-		min-width: unset;
-		max-width: unset;
-		width: 14rem;
-
-		> div {
-			display: none;
-		}
+		display: none;
 	}
 }
 
